MCR-3083 reduce use of org.apache.commons.io.IOUtils (#2127)
* MCR-3083 reduce use of commons.io.IOUtils in mycore-base

* MCR-3083 reduce dependency to commons.io.IOUtils in other mycore-modules

* MCR-3083 bugfix - filepath hierarchie

* MCR-3083 re-add commons.io dependency

* MCR-3083 fix test error (replace existing file)

* MCR-3083 format code